tests/sksl/errors/golden/ArrayTooComplex.glsl
### Compilation failed:

error: 1: type 'float[1][2][3][4][5][6][7][8][9][10]' is too complex
error: 1: type 'int[10][9][8][7][6][5][4][3][2][1]' is too complex
2 errors
